--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "0.11.2",
+    "@vite-pwa/nuxt": "^0.5.0",
     "nuxt": "^3.13.2",
-    "@vite-pwa/nuxt": "^0.5.0"
+    "pinia": "^3.0.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4"
-  }
+  },
+  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
 }
