--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "0.11.2",
     "@vite-pwa/nuxt": "^0.5.0",
     "nuxt": "^3.13.2",
+    "nuxt-i18n-micro": "^1.88.1",
     "pinia": "^3.0.3"
   },
   "devDependencies": {
