--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@pinia/nuxt": "0.11.2",
     "@vite-pwa/nuxt": "^1.1.0",
     "nuxt": "^4.3.0",
-    "nuxt-i18n-micro": "^1.102.0",
-    "pinia": "^3.0.4"
+    "nuxt-i18n-micro": "^1.102.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0"
