--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "HOST=0.0.0.0 nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "build": "nuxt build && sed -i '' 's/import\"__STATIC_CONTENT_MANIFEST\";//' .output/server/index.mjs",
+    "dev": "nuxt dev",
+    "preview": "pnpm dlx wrangler dev",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.6.0",
     "@nuxt/content": "^3.11.0",
     "@vite-pwa/nuxt": "^1.1.0",
     "better-sqlite3": "^12.6.2",
+    "dompurify": "^3.3.1",
+    "linkedom": "^0.18.12",
     "nuxt": "^4.3.0",
     "nuxt-i18n-micro": "^1.102.0"
   },
   "devDependencies": {
+    "@cloudflare/unenv-preset": "^2.12.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "@tailwindcss/typography": "^0.5.19"
+    "@tailwindcss/typography": "^0.5.19",
+    "wrangler": "^4.62.0"
   },
   "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
 }
