--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build && node scripts/postbuild.mjs",
+    "build": "nuxt build",
+    "_postbuild": "node scripts/postbuild.mjs",
     "dev": "nuxt dev",
     "preview": "pnpm dlx wrangler dev",
     "postinstall": "nuxt prepare"
@@ -15,14 +16,14 @@
     "better-sqlite3": "^12.6.2",
     "dompurify": "^3.3.1",
     "linkedom": "^0.18.12",
-    "nuxt": "^4.2.2",
+    "nuxt": "4.2.2",
     "nuxt-i18n-micro": "^1.102.0"
   },
   "devDependencies": {
     "@cloudflare/unenv-preset": "^2.12.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/typography": "^0.5.19",
-    "wrangler": "^4.59.3"
+    "wrangler": "4.59.0"
   },
   "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
 }
